--- a/laravel-shop/composer.json
+++ b/laravel-shop/composer.json
@@ -12,7 +12,8 @@
         "baijunyao/laravel-print": "^3.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "overtrue/laravel-lang": "^3.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
